# toy_robot

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt
tests/: conftest.py  test_cli.py  test_command_interpreter.py  test_commands.py  test_models.py  test_robot.py
tests/resources/: commands_04.txt  commands_06.txt
toy_robot/: cli.py  command_interpreter.py  commands.py  models.py  robot.py
