[tool.poetry]
name = "toy_robot"
version = "0.1.0"
description = "A code challenge"
authors = ["J0hnny Zhang <dew.maple@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.960"
pylint = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
